# mPaxosSM

./: .classpath  .gitignore  .project  LICENSE  README.md  build.xml  jar_jniReplica-fp-ic.sh  jar_jniReplica.sh  paxos.properties  requestExeuteTester.sh
natives/: .gitignore  bpf_cmds  dwe.sh  propose_truncate.bcc.py
natives/common/: blockreuser.hpp  hashmap_persistent.hpp  hashmap_persistent_synchronized.hpp  hashset_persistent.hpp  linkedqueue_persistent.hpp  memchunk.hpp  multiblockreuser.hpp  naive_persistent_stack.hpp
natives/jpaxos-pmem/: CMakeLists.txt  consensusinstance.cpp  consensusinstance.h  consensuslog.cpp  consensuslog.h  hashmap_persistent.hpp  jpaxos-common.hpp  jpaxos-pmem.cpp  paxosstorage.cpp  paxosstorage.h  replicastorage.cpp  replicastorage.h
natives/jpaxos-ram/: CMakeLists.txt  consensusinstance.cpp  consensusinstance.h  consensuslog.cpp  consensuslog.h  jpaxos-common.hpp  jpaxos-ram.cpp  paxosstorage.cpp  paxosstorage.h  replicastorage.cpp  replicastorage.h
natives/service/: CMakeLists.txt  NvmHashMap.hpp  NvmHashMap_helpers.hpp  jpaxos-service.cpp  jpaxos-service.h  service.conf  simple-kv-service.cpp  simple-kv-service.h
natives/service-ram/: CMakeLists.txt  jni-bloat.cpp  jpaxos-service.cpp  jpaxos-service.h  simple-kv-service.cpp  simple-kv-service.h
scenarios/: README
scenarios/digestPmemDist/: postprocess_digest.sh  scenario
scenarios/digestPmemDist_toofast/: config  paxos.properties  processClient.sh  scenario  service.conf
scenarios/plotForDiffSizes2/: .gitignore  config_fakepmem  config_ram  oracle.pl  out_test1_20201231_2358.xz  out_test1_20201231_2359.xz  out_test1_20210618_0731.xz  out_test2_20210630_2332.xz  out_test3B_20210703_0918.xz  out_test3_20210702_2020.xz  out_test4_20210704_1834.xz  service.conf_fakepmem  test1.sh  test2.sh  test3.sh  test3B.sh  test4.sh
scenarios/profiling_normalop/: config  scenario
scenarios/recoveryTest3/: README_extracting_results_1  README_extracting_results_2  catchupParser.pl  config  makeSvgs.sh  paxos.properties  plot1.gnu  plot1b.gnu  plot1b_squezed.gnu  plot1c.gnu  plot2.gnu  plot2_squezed.gnu  scenario  service.conf  test.sh
scenarios/recoveryTest5/: README_extracting_results  catchupParser.pl  config  (+6 more)
(+75 files in other folders)
